--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "smooth dashabord",
   "version": "0.1.0",
+  "homepage": "https://leleking.github.io/smooth-dashboard-template",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.3",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
