--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smooth-dashabord",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "https://leleking.github.io/smooth-dashboard-template/",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.3",
